fix overflow to mobile only

--- a/join-usms/css/membership-comparison.css
+++ b/join-usms/css/membership-comparison.css
@@ -207,4 +207,9 @@
     .show-details .btn {
         margin: 5rem auto 7rem;
     }
+
+    .membership-comparison.show {
+        overflow-x: initial;
+    }
+    
 }
